crates/plotnik-lib/tests/02-parser/recovery_validation/field_name_pascal_case.txt
Q = (call Name: (a))
------------------ DIAGNOSTICS -------------------
error: field names must be snake_case
 --> query.ptk:1:11
  |
1 | Q = (call Name: (a))
  |           ^^^^
  |
help: use `name`
  |
1 - Q = (call Name: (a))
1 + Q = (call name: (a))
  |
help: fields come from the grammar and are snake_case
